fixed alignment

--- a/src/app/my-website/command-prompt/command-prompt.component.scss
+++ b/src/app/my-website/command-prompt/command-prompt.component.scss
@@ -3,6 +3,7 @@
 .command-prompt {
   position: relative;
   width: 100%;
+  height: 25rem;
   border-radius: 0 0 6px 6px;
   padding-top: 1rem;
   overflow: auto;
