--- a/src/app/my-website/my-website.component.scss
+++ b/src/app/my-website/my-website.component.scss
@@ -1,9 +1,3 @@
 .footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  padding-top: 20px;
-  padding-bottom: 10px;
-  background-color: black;
+  text-align: center;
 }
